Fix alignment of Close and Maximize button of Grant Wizard. Fixes #3906

--- a/web/pgadmin/browser/static/css/wizard.css
+++ b/web/pgadmin/browser/static/css/wizard.css
@@ -49,7 +49,6 @@
 .wizard-header button {
     padding: 10px;
     margin-top: -1px;
-    margin-right: 8px;
 }
 
 .wizard-header .ajs-close.wizard-cancel-event {
