--- a/web/pgadmin/browser/static/scss/_wizard.scss
+++ b/web/pgadmin/browser/static/scss/_wizard.scss
@@ -1,5 +1,5 @@
 .wizard-header {
-  padding: 6px 10px!important;
+  padding: 6px!important;
   min-height: $title-height;
   max-height: $title-height;
   background-color: $color-primary;
